Fix incorrect z-index in navbar

--- a/frontend/src/scss/components/_navbar.scss
+++ b/frontend/src/scss/components/_navbar.scss
@@ -27,7 +27,7 @@
     justify-content: space-between;
     flex: 1;
     position: static;
-    z-index: 0;
+    z-index: 100;
     border: 0;
     background-color: transparent;
     border-top: 2px solid $border-color;
